@@ -2,12 +2,12 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base-beta
-pkgver=3.0_ooo300_m4
+pkgver=3.0_ooo300_m5 # =RC1
 pkgrel=1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=(i686 x86_64)
-#_OO_milestone=ooo300-m4
-_OO_milestone=OOO300_m4
+#_OO_milestone=ooo300-m5
+_OO_milestone=OOO300_m5
 license=('LGPL3')
 url="http://www.openoffice.org"
 install=openoffice.install
@@ -30,7 +30,7 @@ source=(${pkgname}-${_OO_milestone}.tar.gz
 	# from http://www.openoffice.org/issues/show_bug.cgi?id=81102
 	FontOOo_1.7.1.sxw)
 options=('!distcc' '!ccache' '!makeflags')
-md5sums=('bd9439a1c5cb765f5b717470f6d6a003'
+md5sums=('3dd848a318bd3ed444c8b8f84bace96d'
          'a247ba577007d8169201bd8f41cf41b5'
          '71f136a31e296a04ab68932a31dd533e'
          '6c596129fb48316226ce3adfd3a4c86d'
